Created Swagger Docs and Containerized the App with lightweight Alpine image
