# controllers/public.go
@@ -9,6 +9,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Signup godoc
+// @Summary Register a new user (Doctor or Receptionist)
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param user body models.User true "User registration data"
+// @Success 201 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Router /signup [post]
 func Signup(c *gin.Context) {
 	c.Header("Content-Type", "application/json")
 	var user models.User
@@ -21,7 +30,6 @@ func Signup(c *gin.Context) {
 			"log":     err.Error(),
 			"Message": "All Fields are mandatory",
 		})
-
 		return
 	}
 
@@ -30,7 +38,6 @@ func Signup(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "Couldnot hash password",
 		})
-
 		return
 	}
 
@@ -40,14 +47,23 @@ func Signup(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": " Could not insert into DB ",
 		})
-
 		return
 	}
 
 	c.JSON(http.StatusCreated, gin.H{"message": "User registered successfully"})
-
 }
 
+// Login godoc
+// @Summary Login for doctor or receptionist
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param credentials body object true "Login credentials (email & password only)"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /login [post]
 func Login(c *gin.Context) {
 	var input struct {
 		Email    string
