# main.go
@@ -7,7 +7,11 @@ import (
 	"log"
 	"os"
 
+	_ "hospital-backend/docs" // Important: for generated Swagger files
+
 	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func init() {
@@ -17,14 +21,21 @@ func init() {
 	gin.SetMode(gin.ReleaseMode)
 }
 
-
-
-
+// @title Hospital Management Backend API
+// @version 1.0
+// @description Role-based backend for doctors and receptionists
+// @host localhost:8080
+// @BasePath /api
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	fmt.Println("!!! Welcome to Hospital Backend !!!")
 
 	r := gin.Default()
 	routes.RegisterRoutes(r)
+
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	port := os.Getenv("SERVER_PORT")
 	if port == "" {
